kubernetes/vader/applications/iot/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant-deployment
  namespace: iot

spec:
  selector:
    matchLabels:
      app: homeassistant
  replicas: 1
  template:
    metadata:
      labels: 
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:latest
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 8123
              name: http
      volumes:
        - name: config
          nfs:
            server: bandit-nfs.local
            path: /srv/nfs/vader/iot/homeassistant-config
