kubernetes/vader/applications/iot/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassisant-service
  namespace: iot

spec:
  type: ClusterIP
  selector:
    app: homeassisant
  ports:
    - name: http
      port: 80
      targetPort: http
