kubernetes/vader/applications/iot/homeassistant/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-ingressroute
  namespace: iot
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`homeassistant.feldman.in`)
      kind: Rule
      services:
        - name: homeassistant-service
          port: 80
  tls:
    secretName: homeassistant-feldman-in-tls
